<resources>
    <string name="app_name">ToDo</string>
    <string name="add_new_task">Add new task</string>
    <string name="edit">Edit</string>
    <string name="task_title">task title</string>
    <string name="task_description">task description</string>
    <string name="mark_as_done">Mark as done:</string>
    <string name="box_color">Box color</string>
    <string name="save_task">SAVE TASK</string>
    <string name="delete_task">DELETE TASK</string>
    <string name="save">SAVE</string>
</resources>
