<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.suncica.todo.AddTaskActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textSize="24dp"
            android:layout_weight="1"/>


        <EditText
            android:id="@+id/editTaskTitleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_title"
            android:layout_weight="1"/>


        <EditText
            android:id="@+id/editDescriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_description"
            android:layout_weight="1"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="2">

            <TextView
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:text="@string/mark_as_done"
                android:textSize="20dp"
                android:layout_weight="5"/>

            <CheckBox
                android:id="@+id/checkAsDone"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/box_color"
            android:textSize="20dp"
            android:layout_weight="2" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/editYellowButton"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorYellowPastel"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/editRedButton"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorRedPastel"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/editGreenButton"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorGreenPastel"
                android:layout_margin="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/editBlueButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorBluePastel"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/editPinkButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPinkPastel"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/editDarkBlueButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:layout_margin="10dp"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">


            <Button
                android:id="@+id/saveTaskButton"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:text="@string/save_task"
                android:layout_weight="1" />

            <Button
                android:id="@+id/deleteTaskButton"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:text="@string/delete_task"
                android:layout_weight="1" />


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
